--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -59,4 +59,6 @@ group :development, :test do
   gem 'factory_bot_rails'
   gem 'faker'
   gem 'rspec-rails'
+  gem 'database_cleaner-active_record'
+  gem 'shoulda-matchers'
 end
