Adding email feature

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -45,6 +45,12 @@ gem 'rswag-ui'
 # Serialization
 gem 'active_model_serializers'
 
+# Email delivery
+gem 'mailgun-ruby'
+
+# Environment variables
+gem 'dotenv-rails', groups: %i[development test]
+
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem 'debug', platforms: %i[mri windows], require: 'debug/prelude'
@@ -55,10 +61,13 @@ group :development, :test do
   # Omakase Ruby styling [https://github.com/rails/rubocop-rails-omakase/]
   gem 'rubocop-rails-omakase', require: false
 
+  # Email preview in development
+  gem 'letter_opener'
+
   # Testing
+  gem 'database_cleaner-active_record'
   gem 'factory_bot_rails'
   gem 'faker'
   gem 'rspec-rails'
-  gem 'database_cleaner-active_record'
   gem 'shoulda-matchers'
 end
