Adding readme and removing unused gems

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -8,16 +8,8 @@ gem 'rails', '~> 7.2.0'
 gem 'pg', '~> 1.1'
 # Use the Puma web server [https://github.com/puma/puma]
 gem 'puma', '>= 5.0'
-# Build JSON APIs with ease [https://github.com/rails/jbuilder]
-gem 'jbuilder'
 # Use Redis adapter to run Action Cable in production
 gem 'redis', '>= 4.0.1'
-
-# Use Kredis to get higher-level data types in Redis [https://github.com/rails/kredis]
-# gem "kredis"
-
-# Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
-# gem "bcrypt", "~> 3.1.7"
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: %i[windows jruby]
@@ -25,10 +17,7 @@ gem 'tzinfo-data', platforms: %i[windows jruby]
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', require: false
 
-# Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
-# gem "image_processing", "~> 1.2"
-
-# Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin Ajax requests possible
+# Use Rack CORS for handling Cross-Origin Resource Sharing (CORS)
 gem 'rack-cors'
 
 # State machine for order status
@@ -37,12 +26,7 @@ gem 'aasm'
 # Background job processing
 gem 'sidekiq'
 
-# API documentation
-gem 'rswag-api'
-gem 'rswag-specs'
-gem 'rswag-ui'
-
-# Serialization
+# JSON API serialization
 gem 'active_model_serializers'
 
 # Email delivery
@@ -52,17 +36,14 @@ gem 'mailgun-ruby'
 gem 'dotenv-rails', groups: %i[development test]
 
 group :development, :test do
-  # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
+  # Debugging
   gem 'debug', platforms: %i[mri windows], require: 'debug/prelude'
 
-  # Static analysis for security vulnerabilities [https://brakemanscanner.org/]
+  # Security analysis
   gem 'brakeman', require: false
 
-  # Omakase Ruby styling [https://github.com/rails/rubocop-rails-omakase/]
+  # Code style
   gem 'rubocop-rails-omakase', require: false
-
-  # Email preview in development
-  gem 'letter_opener'
 
   # Testing
   gem 'database_cleaner-active_record'
